--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
     </canvas>
 
+    <div id="toolbar">
+        <button id="rect">Rect</button>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
