--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
 
-    <canvas id="mainCanvas">
+    <canvas id="mainCanvas" width="800" height="600">
 
     </canvas>
 
     <div id="toolbar">
-        <button id="rect">Rect</button>
+        <button data-tool="rect">Rect</button>
     </div>
 
     <script src="app.js"></script>
