added rect btn handler

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </canvas>
 
     <div id="toolbar">
-        <button data-tool="rect">Rect</button>
+        <button id="rect">Rect</button>
     </div>
 
     <script src="app.js"></script>
