added option to choose fill color

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <div id="toolbar">
         <button id="rect">Rect</button>
+        <input type="color" id="BGColor">
     </div>
 
     <script src="app.js"></script>
